deploy/test/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clearance

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clearance-frontend
  namespace: clearance
spec:
  selector:
    matchLabels:
      app: clearance-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: clearance-frontend
      annotations:
        enable.version-checker.io/clearance-frontend: "true"
    spec:
      containers:
        - name: clearance-frontend
          image: satregistry.ehps.ncsu.edu/clearance-tool/clearance-ui:main
          imagePullPolicy: Always
          command: ["npm"]
          args: ["run", "serve"]

---

kind: Service
apiVersion: v1
metadata:
  name: clearance-frontend
  namespace: clearance
spec:
  selector:
    app: clearance-frontend
  ports:
    - port: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: clearance-front-ingress
    namespace: clearance
    annotations:
      kubernetes.io/ingress.class: public
      cert-manager.io/cluster-issuer: sectigo-staging
spec:
    rules:
    - host: clearance.test.ehps.ncsu.edu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: clearance-frontend
              port:
                number: 3000
    tls:
    -
      hosts:
        - clearance.test.ehps.ncsu.edu
      secretName: clearance-front-tls
